Enable changing the cursor for the QQuickWebView.

Implements setting the platform cursor in QtPageClient.

Task-number: QTBUG-36368
Change-Id: I0ec2dc5eae550a7fa1197587f85c3f84b3225240
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@digia.com>